# ail2-sandbox

./: .gitignore  LICENSE.txt  Makefile  ail.h  ail.mak  blaster.c  blaster.lls  build.bat  build.sh  cakeport.asm  clad.c  clad.lls  digiplay.c  digiplay.lls  dmasound.asm  ff.xmi  gen.h  glib.c  glib.lls  license.txt  menu.mid  menu.xmi  midiecho.c  midiecho.lls  midiform.c  midiform.lls  midilog.c  midilog.lls  midiport.drv  midirec.c  midirec.lls  mixdemo.c  mixdemo.lls  mlist.c  mlist.lls  mpu401.inc  mt32.inc  q.xmi  read.me  sample.cat  (+19 more)
dosbox/: dosbox.conf
dosbox/tools/bc/DOC/: BWCCAPI.RW  BWCCSTYL.RW  CUSTCNTL.RW  MANUAL.RW
dosbox/tools/bc/INCLUDE/: BWCC.H  CDERR.H  COLORDLG.H  COMMDLG.H  CPL.H  CUSTCNTL.H  DDE.H  DDEML.H  DLGS.H  LZEXPAND.H  MMSYSTEM.H  MMSYSTEM.INC  OLE.H  PENWIN.H  PENWOEM.H  PRINT.H  SHELLAPI.H  STRESS.H  TOOLHELP.H  VER.H  WFEXT.H  WIN30.H  WINDOWS.H  WINDOWS.INC  WINDOWSX.H
dosbox/tools/bc/REDIST/: PENWIN.INI
linux/: CMakeLists.txt  Makefile  midiform.c  midiform.pro
